# docs/swagger.json
@@ -65,7 +65,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/base.ReqId"
+                            "$ref": "#/definitions/base.ReqIds"
                         }
                     }
                 ],
@@ -107,7 +107,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/base.ReqId"
+                            "$ref": "#/definitions/base.ReqIds"
                         }
                     }
                 ],
@@ -312,12 +312,15 @@
                 }
             }
         },
-        "base.ReqId": {
+        "base.ReqIds": {
             "type": "object",
             "properties": {
-                "id": {
-                    "description": "主键ID",
-                    "type": "integer"
+                "ids": {
+                    "description": "多id",
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
                 }
             }
         },
