# modules/demo/apis/demo_api.go
@@ -41,7 +41,7 @@ func (e *DemoApi) QueryPage(c *gin.Context) {
 // @Tags Demo
 // @Accept application/json
 // @Product application/json
-// @Param data body base.ReqId true "body"
+// @Param data body base.ReqIds true "body"
 // @Success 200 {object} base.Resp{data=models.Demo} "{"code": 200, "data": [...]}"
 // @Router /api/v1/demo/get [post]
 func (e *DemoApi) Get(c *gin.Context) {
@@ -109,17 +109,17 @@ func (e *DemoApi) Update(c *gin.Context) {
 // @Tags Demo
 // @Accept application/json
 // @Product application/json
-// @Param data body base.ReqId true "body"
+// @Param data body base.ReqIds true "body"
 // @Success 200 {object} base.Resp{data=models.Demo} "{"code": 200, "data": [...]}"
 // @Router /api/v1/demo/del [post]
 func (e *DemoApi) Del(c *gin.Context) {
-	var req base.ReqId
+	var req base.ReqIds
 	if err := c.ShouldBind(&req); err != nil {
 		e.Error(c, err)
 		return
 	}
 	//var data models.Demo
-	if err := service.DemoS.Del(req.Id, e.GetReqId(c)); err != nil {
+	if err := service.DemoS.Del(req.Ids, e.GetReqId(c)); err != nil {
 		e.Err(c, err)
 		return
 	}
